<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="@dimen/login_title_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingTop="60dp"
        android:text="@string/email_label"
        android:textColor="#3F51B5"
        android:textSize="@dimen/login_labels_size" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="#3F51B5"
        android:inputType="textEmailAddress"
        android:gravity="start"
        android:paddingStart="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="25dp"
        android:text="@string/password_label"
        android:textColor="#3F51B5"
        android:textSize="@dimen/login_labels_size" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="#3F51B5"
        android:gravity="left"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <ImageButton
        android:id="@+id/login_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button_style"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:src="@drawable/ic_send_black_24dp"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/login_button_text_size"
        android:contentDescription="@string/login" />
</LinearLayout>
</layout>